# cafeteria

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: code-quality.yml  release.yml  test-suite.yml
cafe/: compat.py  utilities.py
cafe/abc/: __init__.py  compat.py
cafe/database/: sqlalchemy.py
cafe/database/sqlalchemy/: migration.py  postgres.py  session.py
cafe/datastructs/: dict.py  memory.py
cafe/datastructs/units/: __init__.py  data.py
cafe/decorators/: __init__.py
cafe/logging/: __init__.py  trace.py
cafe/patterns/: borg.py
cafe/twisted/: __init__.py
cafeteria/: utilities.py
cafeteria/datastructs/: dict.py
cafeteria/datastructs/units/: __init__.py  data.py
cafeteria/decorators/: __init__.py
cafeteria/logging/: __init__.py  trace.py
cafeteria/patterns/: borg.py  dict.py
cafeteria/patterns/context/: __init__.py
cafeteria/twisted/: __init__.py
src/cafeteria/: utilities.py
src/cafeteria/datastructs/: memory.py
src/cafeteria/logging/: __init__.py
src/cafeteria/patterns/: mixins.py
tests/: test_cafeteria.py
tests/datastructs/: test_datastructs_dict.py
