[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
known_first_party = "cafeteria"

[tool.poetry]
name = "cafeteria"
packages = [
    { include = "cafeteria", from = "src" },
]
version = "0.23.0a0"
repository = "https://github.com/abn/cafeteria"
description = "Cafeteria: A convenience package providing various building blocks enabling pythonic patterns."
authors = [
    "Arun Babu Neelicattu <arun.neelicattu@gmail.com>",
    "Josha Inglis <joshainglis@gmail.com>",
    "Betsy Alpert <lizbeth.alpert@gmail.com>"
]
license = "APLv2"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
keywords = []
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.8"
PyYAML = ">=3.13,!=6.0.0,!=5.4.0,!=5.4.1"

[tool.poetry.dev-dependencies]
coverage = "^7.4"
pytest = "^8.0"
pytest-cov = "^4.1"
